# jordan_scattering_yanglin

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile
.mpl-cache/: fontlist-v390.json
.mpl-cache/xdg-cache/fontconfig/: 00d5189c1d5ced4af9bb23cbaa9b1e94-le64.cache-9
configs/: config.py  full_inverse.yaml  inverse.yaml  plot_filters.yaml
images/: __init__.py  images.py
jordan_scatter/: __init__.py  jordan_scatter.py  mymodule.py
jordan_scatter/helpers/: __init__.py  disk_cache.py  logger.py
jordan_scatter/wavelets/: __init__.py  meyer.py  morlet.py
scripts/: inverse.py  plot_filters.py
